fixed visibility bug

--- a/mtHood.css
+++ b/mtHood.css
@@ -40,5 +40,8 @@ div.textbox {
     background-color: #ffffff;
     border: 1px solid black;
     opacity: 0.5;
-    filter: alpha(opacity=50); 
+    filter: alpha(opacity=50);
+}
+div.textbox p {
+  color: black;
 }
